Change styles in views

--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -28,6 +28,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 --credit-evaluator-mixin: {
                     border-top-left-radius: 5px;
                     border-top-right-radius: 5px;
+                    background-color: transparent;
                 };
                 --credit-evaluator-width: 80%;
                 --credit-evaluator-header-mixin: {
@@ -38,6 +39,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     border-top-right-radius: 5px;
                 };
                 --credit-evaluator-button-bg-color: #0E3F8C;
+                --credit-evaluator-main-mixin: {
+                    width: 95%;
+                    margin: 0 auto;
+                    background-color: transparent;
+                    border: none;
+                };
+
             }
         </style>
         <credit-evaluator title-header="BBVA Bancomer" class="bancomer-evaluator"></credit-evaluator>
