--- a/src/my-view3.html
+++ b/src/my-view3.html
@@ -25,6 +25,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             --credit-evaluator-mixin: {
                 border-top-left-radius: 5px;
                 border-top-right-radius: 5px;
+                background-color: transparent;
             };
             --credit-evaluator-width: 80%;
             --credit-evaluator-header-mixin: {
@@ -35,6 +36,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 border-top-right-radius: 5px;
             };
             --credit-evaluator-button-bg-color: #C82A2F;
+            --credit-evaluator-main-mixin: {
+              width: 95%;
+              margin: 0 auto;
+              background-color: transparent;
+              border: none;
+            };
         }
     </style>
 
