--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -25,6 +25,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             }
 
             .bancomer-evaluator {
+                --credit-evaluator-height: 600px;
                 --credit-evaluator-mixin: {
                     border-top-left-radius: 5px;
                     border-top-right-radius: 5px;
