--- a/src/my-app.html
+++ b/src/my-app.html
@@ -25,6 +25,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="lazy-import" href="my-view1.html">
 <link rel="lazy-import" href="my-view2.html">
 <link rel="lazy-import" href="my-view3.html">
+<link rel="lazy-import" href="my-view4.html">
+<link rel="lazy-import" href="my-view5.html">
+<link rel="lazy-import" href="my-view6.html">
 <link rel="lazy-import" href="my-view404.html">
 
 <dom-module id="my-app">
@@ -80,14 +83,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 tail="{{subroute}}">
         </app-route>
 
-        <app-drawer-layout fullbleed narrow="{{narrow}}">
+        <app-drawer-layout fullbleed narrow="{{narrow}}" force-narrow>
             <!-- Drawer content -->
-            <app-drawer id="drawer" slot="drawer" swipe-open="[[narrow]]">
+            <app-drawer id="drawer" slot="drawer" swipe-open="[[narrow]]" force-narrow>
                 <app-toolbar>Menu</app-toolbar>
                 <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
                     <a name="view1" href="[[rootPath]]view1">Bancomer</a>
                     <a name="view2" href="[[rootPath]]view2">Santander</a>
                     <a name="view3" href="[[rootPath]]view3">Banorte</a>
+                    <a name="view4" href="[[rootPath]]view4">Demo 1</a>
+                    <a name="view5" href="[[rootPath]]view5">Demo 2</a>
+                    <a name="view6" href="[[rootPath]]view6">Demo 3</a>
                 </iron-selector>
             </app-drawer>
 
@@ -97,7 +103,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <app-header slot="header" condenses reveals effects="waterfall">
                     <app-toolbar>
                         <paper-icon-button icon="my-icons:menu" drawer-toggle></paper-icon-button>
-                        <div main-title>Te lo presto</div>
+                        <img src="https://cdn.dribbble.com/users/66640/screenshots/3825236/frida.png"  width="60px" alt="">
+                        <div main-title>Te lo presto Papu</div>
                     </app-toolbar>
                 </app-header>
 
@@ -109,6 +116,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     <my-view1 name="view1"></my-view1>
                     <my-view2 name="view2"></my-view2>
                     <my-view3 name="view3"></my-view3>
+                    <my-view4 name="view4"></my-view4>
+                    <my-view5 name="view5"></my-view5>
+                    <my-view6 name="view6"></my-view6>
                     <my-view404 name="view404"></my-view404>
                 </iron-pages>
 
