--- a/src/my-view6.html
+++ b/src/my-view6.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../../bower_components/polymer/polymer-element.html">
-<link rel="import" href="../../bower_components/Credit-evaluator/Credit-evaluator.html">
+<link rel="import" href="../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../bower_components/Credit-evaluator/Credit-evaluator.html">
 
 <dom-module id="my-view6">
   <template>
