--- a/src/my-view5.html
+++ b/src/my-view5.html
@@ -142,7 +142,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       --credit-evaluator-main-mixin: {
         padding: 20px;
-        
+
       }
       --credit-evaluator-footer-mixin: {
         padding: 0 20px;
@@ -171,24 +171,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <div class="card-element">
             <paper-card heading="Acerca" image="https://images.unsplash.com/photo-1493689485253-f07fcbfc731b?auto=format&fit=crop&w=2066&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" alt="Emmental">
               <div class="card-content">
-                Emmentaler or Emmental is a yellow, medium-hard cheese that originated in the area around Emmental, Switzerland. It is one
-                of the cheeses of Switzerland, and is sometimes known as Swiss cheese.
+                La mejor herramienta para poder dar creditos y poder definir multiples variables.
               </div>
             </paper-card>
         </div>
         <div class="card-element ">
             <paper-card heading="Servicios" image="https://images.unsplash.com/photo-1499083097717-a156f85f0516?auto=format&fit=crop&w=2102&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" alt="Emmental">
               <div class="card-content">
-                Emmentaler or Emmental is a yellow, medium-hard cheese that originated in the area around Emmental, Switzerland. It is one
-                of the cheeses of Switzerland, and is sometimes known as Swiss cheese.
+                Muchas de las empresas tienene que crear su propio sistema de prestamos, con este componente queremos facilitar ese camino.
               </div>
             </paper-card>
         </div>
         <div class="card-element ">
             <paper-card heading="Contacto" image="https://images.unsplash.com/uploads/1413222992504f1b734a6/1928e537?auto=format&fit=crop&w=2100&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" alt="Emmental">
               <div class="card-content">
-                Emmentaler or Emmental is a yellow, medium-hard cheese that originated in the area around Emmental, Switzerland. It is one
-                of the cheeses of Switzerland, and is sometimes known as Swiss cheese.
+                Se puede configurar con una API o con algun json de configuración.
               </div>
             </paper-card>
         </div>
