--- a/src/my-view6.html
+++ b/src/my-view6.html
@@ -34,6 +34,11 @@
         display: inline-block;
       }
       credit-evaluator {
+        --credit-evaluator-main-border: none;
+        --paper-input-container-input-color: white;
+        --paper-input-container-color: white;
+        --secondary-text-color: lightblue;
+        --credit-evaluator-main-bg-color: darkgray;
         --iron-overlay-backdrop-opacity: 0;
         --credit-evaluator-width: 300px;
         --credit-evaluator-height: 450px;
