--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         min-height: 100vh;
         background-color: #eeeeee;
       }
+      iron-overlay-backdrop {
+        --iron-overlay-backdrop-opacity: 0.1;
+      }
     </style>
   </head>
   <body>
